--- a/samples/MauiEmbedding/Directory.Packages.props
+++ b/samples/MauiEmbedding/Directory.Packages.props
@@ -12,7 +12,7 @@
     <PackageVersion Include="Uno.Dsp.Tasks" Version="1.1.0" />
     <PackageVersion Include="Uno.Toolkit.WinUI" Version="3.0.4" />
     <PackageVersion Include="Uno.Toolkit.WinUI.Material" Version="3.0.4" />
-    <PackageVersion Include="Uno.Resizetizer" Version="1.1.0" />
+    <PackageVersion Include="Uno.Resizetizer" Version="1.2.0-dev.11" />
     <PackageVersion Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.9.20" />
     <PackageVersion Include="Uno.UniversalImageLoader" Version="1.9.36" />
     <PackageVersion Include="Uno.WinUI" Version="4.9.20" />
