--- a/samples/MauiEmbedding/Directory.Packages.props
+++ b/samples/MauiEmbedding/Directory.Packages.props
@@ -17,5 +17,6 @@
     <PackageVersion Include="Uno.UniversalImageLoader" Version="1.9.36" />
     <PackageVersion Include="Uno.WinUI" Version="4.9.20" />
     <PackageVersion Include="Uno.WinUI.RemoteControl" Version="4.9.20" />
+    <PackageVersion Include="CommunityToolkit.Maui" Version="2.0.0" />
   </ItemGroup>
 </Project>
