--- a/samples/Playground/Directory.Packages.props
+++ b/samples/Playground/Directory.Packages.props
@@ -13,8 +13,8 @@
 		<PackageVersion Include="Microsoft.NETCore.UniversalWindowsPlatform" Version="6.2.13"/>
 		<PackageVersion Include="Microsoft.UI.Xaml" Version="2.7.1" />
 		<PackageVersion Include="Microsoft.Windows.Compatibility" Version="6.0.0" />
-		<PackageVersion Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.22621.755" />
-		<PackageVersion Include="Microsoft.WindowsAppSDK" Version="1.2.230118.102" />
+		<PackageVersion Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.22621.756" />
+		<PackageVersion Include="Microsoft.WindowsAppSDK" Version="1.3.230602002" />
 		<PackageVersion Include="Refit" Version="6.3.2"/>
 		<PackageVersion Include="Refit.HttpClientFactory" Version="6.3.2" />
 		<PackageVersion Include="SkiaSharp.Views" Version="2.80.3" />
@@ -23,22 +23,22 @@
 		<PackageVersion Include="Uno.Core.Extensions.Logging.Singleton" Version="4.0.1" />
 		<PackageVersion Include="Uno.Extensions.Logging.OSLog " Version="1.4.0" />
 		<PackageVersion Include="Uno.Extensions.Logging.WebAssembly.Console" Version="1.3.0" />
-		<PackageVersion Include="Uno.Material" Version="2.5.3" />
-		<PackageVersion Include="Uno.Material.WinUI" Version="2.5.3" />
-		<PackageVersion Include="Uno.Toolkit.UI" Version="2.6.0-dev.40" />
-		<PackageVersion Include="Uno.Toolkit.UI.Material" Version="2.6.0-dev.40" />
-		<PackageVersion Include="Uno.Toolkit.WinUI" Version="2.6.0-dev.40" />
-		<PackageVersion Include="Uno.Toolkit.WinUI.Material" Version="2.6.0-dev.40" />
-		<PackageVersion Include="Uno.UI" Version="4.9.0-dev.587" />
-		<PackageVersion Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.9.0-dev.587" />
-		<PackageVersion Include="Uno.UI.RemoteControl" Version="4.9.0-dev.587" />
-		<PackageVersion Include="Uno.UI.Skia.Gtk" Version="4.9.0-dev.587" />
-		<PackageVersion Include="Uno.UI.Skia.Tizen" Version="4.9.0-dev.587" />
-		<PackageVersion Include="Uno.UI.Skia.Wpf" Version="4.9.0-dev.587" />
-		<PackageVersion Include="Uno.UI.WebAssembly" Version="4.9.0-dev.587" />
+		<PackageVersion Include="Uno.Material" Version="2.6.1" />
+		<PackageVersion Include="Uno.Material.WinUI" Version="2.6.1" />
+		<PackageVersion Include="Uno.Toolkit.UI" Version="3.0.4" />
+		<PackageVersion Include="Uno.Toolkit.UI.Material" Version="3.0.4" />
+		<PackageVersion Include="Uno.Toolkit.WinUI" Version="3.0.4" />
+		<PackageVersion Include="Uno.Toolkit.WinUI.Material" Version="3.0.4" />
+		<PackageVersion Include="Uno.UI" Version="4.9.20" />
+		<PackageVersion Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.9.20" />
+		<PackageVersion Include="Uno.UI.RemoteControl" Version="4.9.20" />
+		<PackageVersion Include="Uno.UI.Skia.Gtk" Version="4.9.20" />
+		<PackageVersion Include="Uno.UI.Skia.Tizen" Version="4.9.20" />
+		<PackageVersion Include="Uno.UI.Skia.Wpf" Version="4.9.20" />
+		<PackageVersion Include="Uno.UI.WebAssembly" Version="4.9.20" />
 		<PackageVersion Include="Uno.UniversalImageLoader" Version="1.9.36" />
 		<PackageVersion Include="Uno.Wasm.Bootstrap" Version="7.0.12" />
 		<PackageVersion Include="Uno.Wasm.Bootstrap.DevServer" Version="7.0.12" />
-		<PackageVersion Include="Uno.WinUI" Version="4.9.0-dev.587" />
+		<PackageVersion Include="Uno.WinUI" Version="4.9.20" />
 	</ItemGroup>
 </Project>
