--- a/src/Directory.Packages.props
+++ b/src/Directory.Packages.props
@@ -20,7 +20,7 @@
 		<PackageVersion Include="Microsoft.Net.Compilers.Toolset" Version="4.2.0" />
 		<PackageVersion Include="Microsoft.SourceLink.GitHub" Version="1.1.1" />
 		<PackageVersion Include="Microsoft.UI.Xaml" Version="2.7.1" />
-		<PackageVersion Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.22621.755" />
+		<PackageVersion Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.22621.756" />
 		<PackageVersion Include="Microsoft.WindowsAppSDK" Version="1.1.0" />
 		<PackageVersion Include="Moq" Version="4.17.2" />
 		<PackageVersion Include="Refit" Version="6.3.2" />
@@ -41,18 +41,18 @@
 		<PackageVersion Include="Uno.Extensions.Logging.WebAssembly.Console" Version="1.3.0" />
 		<PackageVersion Include="Uno.Extensions.Markup.Generators" Version="1.0.0-dev.166" />
 		<PackageVersion Include="Uno.Roslyn" Version="1.3.0-dev.12" />
-		<PackageVersion Include="Uno.Toolkit" Version="2.6.0-dev.40" />
-		<PackageVersion Include="Uno.Toolkit.UI" Version="2.6.0-dev.40" />
-		<PackageVersion Include="Uno.Toolkit.WinUI" Version="2.6.0-dev.40" />
-		<PackageVersion Include="Uno.UI" Version="4.9.0-dev.587" />
-		<PackageVersion Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.9.0-dev.587"/>
-		<PackageVersion Include="Uno.UI.MSAL"  Version="4.9.0-dev.587" />
-		<PackageVersion Include="Uno.UI.Runtime.WebAssembly" Version="4.9.0-dev.587" />
-		<PackageVersion Include="Uno.UI.RuntimeTests.Engine" Version="0.14.0-dev.54" />
-		<PackageVersion Include="Uno.WinUI" Version="4.9.0-dev.587" />
-		<PackageVersion Include="Uno.WinUI.Markup" Version="4.6.0-dev.16" />
-		<PackageVersion Include="Uno.WinUI.MSAL" Version="4.9.0-dev.587" />
-		<PackageVersion Include="Uno.WinUI.Runtime.WebAssembly" Version="4.9.0-dev.587" />
+		<PackageVersion Include="Uno.Toolkit" Version="3.0.4" />
+		<PackageVersion Include="Uno.Toolkit.UI" Version="3.0.4" />
+		<PackageVersion Include="Uno.Toolkit.WinUI" Version="3.0.4" />
+		<PackageVersion Include="Uno.UI" Version="4.9.20" />
+		<PackageVersion Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.9.20"/>
+		<PackageVersion Include="Uno.UI.MSAL"  Version="4.9.20" />
+		<PackageVersion Include="Uno.UI.Runtime.WebAssembly" Version="4.9.20" />
+		<PackageVersion Include="Uno.UI.RuntimeTests.Engine" Version="0.15.0-dev.56" />
+		<PackageVersion Include="Uno.WinUI" Version="4.9.20" />
+		<PackageVersion Include="Uno.WinUI.Markup" Version="4.8.0-dev.35" />
+		<PackageVersion Include="Uno.WinUI.MSAL" Version="4.9.20" />
+		<PackageVersion Include="Uno.WinUI.Runtime.WebAssembly" Version="4.9.20" />
 		<PackageVersion Include="coverlet.collector" Version="3.1.2" />
 		<PackageVersion Include="xunit" Version="2.4.1" />
 		<PackageVersion Include="xunit.runner.visualstudio" Version="2.4.1" />
