--- a/src/Uno.Extensions.Navigation.UI.Markup/Uno.Extensions.Navigation.WinUI.Markup.csproj
+++ b/src/Uno.Extensions.Navigation.UI.Markup/Uno.Extensions.Navigation.WinUI.Markup.csproj
@@ -7,6 +7,7 @@
 		<!--Temporary disable missing XML doc until fixed in the whole package-->
 		<WarningsNotAsErrors>$(WarningsNotAsErrors);CS1591</WarningsNotAsErrors>
 		<DefineConstants>$(DefineConstants);WINUI</DefineConstants>
+		<WinAppSdkVersion>1.3.230602002</WinAppSdkVersion>
 	</PropertyGroup>
 
 	<ItemGroup>
