--- a/testing/TestHarness/Directory.Packages.props
+++ b/testing/TestHarness/Directory.Packages.props
@@ -17,9 +17,9 @@
     <PackageVersion Include="Microsoft.NETFramework.ReferenceAssemblies" Version="1.0.2" />
     <PackageVersion Include="Microsoft.Toolkit.Uwp.UI" Version="7.1.2" />
     <PackageVersion Include="Microsoft.UI.Xaml" Version="2.7.1" />
-    <PackageVersion Include="Microsoft.WindowsAppSDK" Version="1.2.230118.102" />
+    <PackageVersion Include="Microsoft.WindowsAppSDK" Version="1.3.230602002" />
     <PackageVersion Include="Microsoft.Windows.Compatibility" Version="5.0.0" />
-    <PackageVersion Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.22621.755" />
+    <PackageVersion Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.22621.756" />
     <PackageVersion Include="Refit" Version="6.3.2" />
     <PackageVersion Include="Refit.HttpClientFactory" Version="6.3.2" />
     <PackageVersion Include="SkiaSharp.HarfBuzz" Version="2.88.3" />
@@ -35,22 +35,22 @@
     <PackageVersion Include="Uno.Core.Extensions.Logging.Singleton" Version="4.0.1" />
     <PackageVersion Include="Uno.Extensions.Logging.OSLog " Version="1.4.0" />
     <PackageVersion Include="Uno.Extensions.Logging.WebAssembly.Console" Version="1.3.0" />
-    <PackageVersion Include="Uno.Material" Version="2.5.3" />
-    <PackageVersion Include="Uno.Material.WinUI" Version="2.5.3" />
+    <PackageVersion Include="Uno.Material" Version="2.6.1" />
+    <PackageVersion Include="Uno.Material.WinUI" Version="2.6.1" />
     <PackageVersion Include="Uno.Microsoft.Toolkit.Uwp.UI" Version="7.1.11" />
-    <PackageVersion Include="Uno.Toolkit.UI" Version="2.6.0-dev.40" />
-    <PackageVersion Include="Uno.Toolkit.UI.Material" Version="2.6.0-dev.40" />
-    <PackageVersion Include="Uno.Toolkit.WinUI" Version="2.6.0-dev.40" />
-    <PackageVersion Include="Uno.Toolkit.WinUI.Material" Version="2.6.0-dev.40" />
-    <PackageVersion Include="Uno.UI" Version="4.9.0-dev.587" />
-    <PackageVersion Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.9.0-dev.587" />
-    <PackageVersion Include="Uno.UI.MSAL" Version="4.9.0-dev.587" />
-    <PackageVersion Include="Uno.UI.RemoteControl" Version="4.9.0-dev.587" />
-    <PackageVersion Include="Uno.UI.Skia.Gtk" Version="4.9.0-dev.587" />
-    <PackageVersion Include="Uno.UI.Skia.Linux.FrameBuffer" Version="4.9.0-dev.587" />
-    <PackageVersion Include="Uno.UI.Skia.Tizen" Version="4.9.0-dev.587" />
-    <PackageVersion Include="Uno.UI.Skia.Wpf" Version="4.9.0-dev.587" />
-    <PackageVersion Include="Uno.UI.WebAssembly" Version="4.9.0-dev.587" />
+    <PackageVersion Include="Uno.Toolkit.UI" Version="3.0.4" />
+    <PackageVersion Include="Uno.Toolkit.UI.Material" Version="3.0.4" />
+    <PackageVersion Include="Uno.Toolkit.WinUI" Version="3.0.4" />
+    <PackageVersion Include="Uno.Toolkit.WinUI.Material" Version="3.0.4" />
+    <PackageVersion Include="Uno.UI" Version="4.9.20" />
+    <PackageVersion Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.9.20" />
+    <PackageVersion Include="Uno.UI.MSAL" Version="4.9.20" />
+    <PackageVersion Include="Uno.UI.RemoteControl" Version="4.9.20" />
+    <PackageVersion Include="Uno.UI.Skia.Gtk" Version="4.9.20" />
+    <PackageVersion Include="Uno.UI.Skia.Linux.FrameBuffer" Version="4.9.20" />
+    <PackageVersion Include="Uno.UI.Skia.Tizen" Version="4.9.20" />
+    <PackageVersion Include="Uno.UI.Skia.Wpf" Version="4.9.20" />
+    <PackageVersion Include="Uno.UI.WebAssembly" Version="4.9.20" />
     <PackageVersion Include="Uno.UITest" Version="1.1.0-dev.32" />
     <PackageVersion Include="Uno.UITest.Selenium" Version="1.1.0-dev.32" />
     <PackageVersion Include="Uno.UITest.Xamarin" Version="1.1.0-dev.32" />
@@ -58,13 +58,13 @@
     <PackageVersion Include="Uno.UniversalImageLoader" Version="1.9.36" />
     <PackageVersion Include="Uno.Wasm.Bootstrap" Version="7.0.12" />
     <PackageVersion Include="Uno.Wasm.Bootstrap.DevServer" Version="7.0.12" />
-    <PackageVersion Include="Uno.WinUI" Version="4.9.0-dev.587" />
-    <PackageVersion Include="Uno.WinUI.Skia.Gtk" Version="4.9.0-dev.587" />
-    <PackageVersion Include="Uno.WinUI.Skia.Linux.FrameBuffer" Version="4.9.0-dev.587" />
-    <PackageVersion Include="Uno.WinUI.Skia.Wpf" Version="4.9.0-dev.587" />
-    <PackageVersion Include="Uno.WinUI.MSAL" Version="4.9.0-dev.587" />
-    <PackageVersion Include="Uno.WinUI.RemoteControl" Version="4.9.0-dev.587" />
-    <PackageVersion Include="Uno.WinUI.WebAssembly" Version="4.9.0-dev.587" />
+    <PackageVersion Include="Uno.WinUI" Version="4.9.20" />
+    <PackageVersion Include="Uno.WinUI.Skia.Gtk" Version="4.9.20" />
+    <PackageVersion Include="Uno.WinUI.Skia.Linux.FrameBuffer" Version="4.9.20" />
+    <PackageVersion Include="Uno.WinUI.Skia.Wpf" Version="4.9.20" />
+    <PackageVersion Include="Uno.WinUI.MSAL" Version="4.9.20" />
+    <PackageVersion Include="Uno.WinUI.RemoteControl" Version="4.9.20" />
+    <PackageVersion Include="Uno.WinUI.WebAssembly" Version="4.9.20" />
     <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.2.0" />
     <PackageVersion Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageVersion Include="NUnit" Version="3.13.3" />
