--- a/samples/Playground/Playground.macOS/Playground.macOS.csproj
+++ b/samples/Playground/Playground.macOS/Playground.macOS.csproj
@@ -139,10 +139,14 @@
       <Project>{9f8db209-a0d3-439e-8624-0ddd3608e886}</Project>
       <Name>Uno.Extensions.Http</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\..\src\Uno.Extensions.Localization.UI\Uno.Extensions.Localization.UI.csproj">
-      <Project>{18bb4421-14a0-4402-8d78-d6c1f73d0202}</Project>
-      <Name>Uno.Extensions.Localization.UI</Name>
-    </ProjectReference>
+		<ProjectReference Include="..\..\..\src\Uno.Extensions.Localization.UI\Uno.Extensions.Localization.UI.csproj">
+			<Project>{18bb4421-14a0-4402-8d78-d6c1f73d0202}</Project>
+			<Name>Uno.Extensions.Localization.UI</Name>
+		</ProjectReference>
+		<ProjectReference Include="..\..\..\src\Uno.Extensions.Localization\Uno.Extensions.Localization.csproj">
+			<Project>{12750e72-31b8-4331-b3bb-850bb590b8f9}</Project>
+			<Name>Uno.Extensions.Localization</Name>
+		</ProjectReference>
     <ProjectReference Include="..\..\..\src\Uno.Extensions.Logging.Serilog\Uno.Extensions.Logging.Serilog.csproj">
       <Project>{75453616-7be7-4b87-8d4a-72ba487e1e7c}</Project>
       <Name>Uno.Extensions.Logging.Serilog</Name>
