--- a/samples/Playground/Playground.iOS/Playground.iOS.csproj
+++ b/samples/Playground/Playground.iOS/Playground.iOS.csproj
@@ -209,6 +209,10 @@
       <Project>{18bb4421-14a0-4402-8d78-d6c1f73d0202}</Project>
       <Name>Uno.Extensions.Localization.UI</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\..\src\Uno.Extensions.Localization\Uno.Extensions.Localization.csproj">
+      <Project>{12750e72-31b8-4331-b3bb-850bb590b8f9}</Project>
+      <Name>Uno.Extensions.Localization</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\..\src\Uno.Extensions.Logging.Serilog\Uno.Extensions.Logging.Serilog.csproj">
       <Project>{75453616-7be7-4b87-8d4a-72ba487e1e7c}</Project>
       <Name>Uno.Extensions.Logging.Serilog</Name>
