--- a/testing/TestHarness/TestHarness.Legacy.Skia.WPF/TestHarness.Legacy.Skia.WPF.csproj
+++ b/testing/TestHarness/TestHarness.Legacy.Skia.WPF/TestHarness.Legacy.Skia.WPF.csproj
@@ -1,6 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
-		<TargetFramework>netstandard2.0</TargetFramework>
+		<TargetFramework>net7.0</TargetFramework>
 		<AssemblyName>TestHarnessApp</AssemblyName>
 		<UnoExtensionsGeneration_DisableNotNullIfNotNullAttribute>true</UnoExtensionsGeneration_DisableNotNullIfNotNullAttribute>
 	</PropertyGroup>
