--- a/src/Uno.Extensions.Hosting.UI/Uno.Extensions.Hosting.UWP.Wasm.csproj
+++ b/src/Uno.Extensions.Hosting.UI/Uno.Extensions.Hosting.UWP.Wasm.csproj
@@ -1,10 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk" ToolsVersion="15.0">
-	<Import Project="..\tfms-non-ui.props" />
-
 	<PropertyGroup>
 		<IsPackable>false</IsPackable>
 		<RootNamespace>Uno.Extensions.Hosting.UWP</RootNamespace>
 		<AssemblyName>Uno.Extensions.Hosting.UWP</AssemblyName>
+		
+		<TargetFramework>net7.0</TargetFramework>
 	</PropertyGroup>
 
 	<ItemGroup>
