--- a/src/Uno.Extensions.Logging/Uno.Extensions.Logging.UWP.csproj
+++ b/src/Uno.Extensions.Logging/Uno.Extensions.Logging.UWP.csproj
@@ -16,7 +16,7 @@
 		</Content>
 	</ItemGroup>
 
-	<ItemGroup>
+	<ItemGroup Condition="!$(_IsUWP)">
 		<PackageReference Include="Uno.UI" />
 	</ItemGroup>
 
