--- a/src/Uno.Extensions.Logging/Uno.Extensions.Logging.WinUI.Skia.csproj
+++ b/src/Uno.Extensions.Logging/Uno.Extensions.Logging.WinUI.Skia.csproj
@@ -1,5 +1,4 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk" ToolsVersion="15.0">
-	<Import Project="..\tfms-non-ui.props" />
 
 	<PropertyGroup>
 		<IsPackable>false</IsPackable>
@@ -7,6 +6,8 @@
 		<UnoRuntimeIdentifier>skia</UnoRuntimeIdentifier>
 		<DefineConstants>$(DefineConstants);__SKIA__</DefineConstants>
 		<AssemblyName>Uno.Extensions.Logging.WinUI</AssemblyName>
+		
+		<TargetFramework>net7.0</TargetFramework>
 	</PropertyGroup>
 
 	<ItemGroup Condition="'$(_IsWinUI)'=='false'">
