--- a/samples/Playground/Directory.Build.props
+++ b/samples/Playground/Directory.Build.props
@@ -1,7 +1,10 @@
 <Project ToolsVersion="15.0">
 	<PropertyGroup>
 		<LangVersion>10.0</LangVersion>
-		<Nullable>enable</Nullable>
+
+		<!-- https://github.com/unoplatform/private/issues/332 -->
+		<Nullable>annotations</Nullable>
+
 		<WarningsAsErrors>enable</WarningsAsErrors>
 		<NoWarn>$(NoWarn);NU5104;CS1591;MSB3277;XA0101;CS8785;CS8669</NoWarn>
 		<ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
