--- a/samples/Playground/Playground.Skia.Wpf/Playground.Skia.Wpf.csproj
+++ b/samples/Playground/Playground.Skia.Wpf/Playground.Skia.Wpf.csproj
@@ -1,6 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
-		<TargetFramework>netstandard2.0</TargetFramework>
+		<TargetFramework>net7.0</TargetFramework>
 		<AssemblyName>PlaygroundApp</AssemblyName>
 		<RootNamespace>Playground</RootNamespace>
 	</PropertyGroup>
