--- a/src/Uno.Extensions.Authentication.MSAL/Uno.Extensions.Authentication.MSAL.UI.Wasm.csproj
+++ b/src/Uno.Extensions.Authentication.MSAL/Uno.Extensions.Authentication.MSAL.UI.Wasm.csproj
@@ -1,7 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk" ToolsVersion="15.0">
-	<Import Project="..\tfms-non-ui.props" />
 
 	<PropertyGroup>
+		<TargetFramework>net7.0</TargetFramework>
+
 		<IsPackable>false</IsPackable>
 		<RootNamespace>Uno.Extensions.Authentication.MSAL.UI</RootNamespace>
 		<AssemblyName>Uno.Extensions.Authentication.MSAL.UI</AssemblyName>
