--- a/src/Uno.Extensions.Hosting.UI/Uno.Extensions.Hosting.UWP.Skia.csproj
+++ b/src/Uno.Extensions.Hosting.UI/Uno.Extensions.Hosting.UWP.Skia.csproj
@@ -1,12 +1,12 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk" ToolsVersion="15.0">
-	<Import Project="..\tfms-non-ui.props" />
-
 	<PropertyGroup>
 		<IsPackable>false</IsPackable>
 		<RootNamespace>Uno.Extensions.Hosting.UWP</RootNamespace>
 		<UnoRuntimeIdentifier>skia</UnoRuntimeIdentifier>
 		<DefineConstants>$(DefineConstants);__SKIA__</DefineConstants>
 		<AssemblyName>Uno.Extensions.Hosting.UWP</AssemblyName>
+
+		<TargetFramework>net7.0</TargetFramework>
 	</PropertyGroup>
 
 	<ItemGroup>
