--- a/src/Uno.Extensions.Hosting.UI/Uno.Extensions.Hosting.WinUI.Wasm.csproj
+++ b/src/Uno.Extensions.Hosting.UI/Uno.Extensions.Hosting.WinUI.Wasm.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk" ToolsVersion="15.0">
-	<Import Project="..\tfms-non-ui.props" />
-
 	<PropertyGroup>
+		<TargetFramework>net7.0</TargetFramework>
+
 		<IsPackable>false</IsPackable>
 		<RootNamespace>Uno.Extensions.Hosting.WinUI</RootNamespace>
 		<AssemblyName>Uno.Extensions.Hosting.WinUI</AssemblyName>
