--- a/src/Uno.Extensions.Logging/Uno.Extensions.Logging.UWP.Skia.csproj
+++ b/src/Uno.Extensions.Logging/Uno.Extensions.Logging.UWP.Skia.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk" ToolsVersion="15.0">
-	<Import Project="..\tfms-non-ui.props" />
-
 	<PropertyGroup>
+		<TargetFramework>net7.0</TargetFramework>
+
 		<IsPackable>false</IsPackable>
 		<RootNamespace>Uno.Extensions.Logging.UWP</RootNamespace>
 		<UnoRuntimeIdentifier>skia</UnoRuntimeIdentifier>
