--- a/src/Uno.Extensions.Logging/Uno.Extensions.Logging.UWP.Wasm.csproj
+++ b/src/Uno.Extensions.Logging/Uno.Extensions.Logging.UWP.Wasm.csproj
@@ -1,10 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk" ToolsVersion="15.0">
-	<Import Project="..\tfms-non-ui.props" />
 
 	<PropertyGroup>
 		<IsPackable>false</IsPackable>
 		<RootNamespace>Uno.Extensions.Logging.UWP</RootNamespace>
 		<AssemblyName>Uno.Extensions.Logging.UWP</AssemblyName>
+
+		<TargetFramework>net7.0</TargetFramework>
 	</PropertyGroup>
 
 	<ItemGroup>
