--- a/src/Uno.Extensions.Logging/common.props
+++ b/src/Uno.Extensions.Logging/common.props
@@ -8,6 +8,9 @@
 	<ItemGroup>
 		<PackageReference Include="Microsoft.Extensions.Hosting" />
 		<PackageReference Include="Microsoft.Extensions.Logging" />
+	</ItemGroup>
+
+	<ItemGroup Condition="!$(_IsUWP)">
 		<PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" />
 	</ItemGroup>
 
