--- a/src/Uno.Extensions.RuntimeTests/Uno.Extensions.RuntimeTests.Wasm/Uno.Extensions.RuntimeTests.Wasm.csproj
+++ b/src/Uno.Extensions.RuntimeTests/Uno.Extensions.RuntimeTests.Wasm/Uno.Extensions.RuntimeTests.Wasm.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 	<PropertyGroup>
 		<OutputType>Exe</OutputType>
-		<TargetFramework>net6.0</TargetFramework>
+		<TargetFramework>net7.0</TargetFramework>
 		<NoWarn>NU1701</NoWarn>
 		<ManagePackageVersionsCentrally>false</ManagePackageVersionsCentrally>
 
@@ -49,12 +49,12 @@
 		<PackageReference Update="Microsoft.Net.Compilers.Toolset" Version="4.2.0" />
 		<PackageReference Include="Microsoft.Extensions.Logging" Version="6.0.0" />
 		<PackageReference Include="Uno.Extensions.Logging.WebAssembly.Console" Version="1.4.0" />
-		<PackageReference Include="Uno.WinUI.WebAssembly" Version="4.9.20" />
-		<PackageReference Include="Uno.WinUI.RemoteControl" Version="4.9.20" Condition="'$(Configuration)'=='Debug'" />
-		<PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.9.20" />
+		<PackageReference Include="Uno.WinUI.WebAssembly" Version="5.0.0-feature.5x.655" />
+		<PackageReference Include="Uno.WinUI.RemoteControl" Version="5.0.0-feature.5x.655" Condition="'$(Configuration)'=='Debug'" />
+		<PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="5.0.0-feature.5x.655" />
 		<PackageReference Include="Uno.Wasm.Bootstrap" Version="7.0.12" />
 		<PackageReference Include="Uno.Wasm.Bootstrap.DevServer" Version="7.0.12" />
-		<PackageReference Include="Uno.WinUI.Lottie" Version="4.9.20" />
+		<PackageReference Include="Uno.WinUI.Lottie" Version="5.0.0-feature.5x.655" />
 	</ItemGroup>
 	<Import Project="..\Uno.Extensions.RuntimeTests.Shared\Uno.Extensions.RuntimeTests.Shared.projitems" Label="Shared" Condition="Exists('..\Uno.Extensions.RuntimeTests.Shared\Uno.Extensions.RuntimeTests.Shared.projitems')" />
 	<Import Project="..\Uno.Extensions.RuntimeTests.Shared\common.props" />
