--- a/src/Uno.Extensions/Uno.Extensions.csproj
+++ b/src/Uno.Extensions/Uno.Extensions.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="MSBuild.Sdk.Extras" ToolsVersion="15.0">
 
 	<PropertyGroup>
-		<TargetFrameworks>netstandard2.0</TargetFrameworks>
+		<TargetFrameworks>net7.0</TargetFrameworks>
   </PropertyGroup>
 
 </Project>
