--- a/samples/Playground/Directory.Packages.props
+++ b/samples/Playground/Directory.Packages.props
@@ -23,8 +23,8 @@
 		<PackageVersion Include="Uno.Core.Extensions.Logging.Singleton" Version="4.0.1" />
 		<PackageVersion Include="Uno.Extensions.Logging.OSLog " Version="1.4.0" />
 		<PackageVersion Include="Uno.Extensions.Logging.WebAssembly.Console" Version="1.3.0" />
-		<PackageVersion Include="Uno.Material" Version="2.5.3" />
-		<PackageVersion Include="Uno.Material.WinUI" Version="2.5.3" />
+		<PackageVersion Include="Uno.Material" Version="2.15.0-feature.5x.9" />
+		<PackageVersion Include="Uno.Material.WinUI" Version="2.15.0-feature.5x.9" />
 		<PackageVersion Include="Uno.Toolkit.UI" Version="3.10.0-feature.5x.25" />
 		<PackageVersion Include="Uno.Toolkit.UI.Material" Version="3.10.0-feature.5x.25" />
 		<PackageVersion Include="Uno.Toolkit.WinUI" Version="3.10.0-feature.5x.25" />
@@ -37,8 +37,8 @@
 		<PackageVersion Include="Uno.UI.Skia.Wpf" Version="5.0.0-feature.5x.655" />
 		<PackageVersion Include="Uno.UI.WebAssembly" Version="5.0.0-feature.5x.655" />
 		<PackageVersion Include="Uno.UniversalImageLoader" Version="1.9.36" />
-		<PackageVersion Include="Uno.Wasm.Bootstrap" Version="7.0.12" />
-		<PackageVersion Include="Uno.Wasm.Bootstrap.DevServer" Version="7.0.12" />
+		<PackageVersion Include="Uno.Wasm.Bootstrap" Version="7.0.20" />
+		<PackageVersion Include="Uno.Wasm.Bootstrap.DevServer" Version="7.0.20" />
 		<PackageVersion Include="Uno.WinUI" Version="5.0.0-feature.5x.655" />
 	</ItemGroup>
 </Project>
