chore: added property that allows the projects to be build on macos
(cherry picked from commit b3ea7fe9484b81a042c085257895e66a5592be8c)

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -23,6 +23,9 @@
 		<!-- Forces Uno's XamlFileGenerator to write error when XAML is invalid-->
 		<ShouldWriteErrorOnInvalidXaml>True</ShouldWriteErrorOnInvalidXaml>
 	</PropertyGroup>
+	<PropertyGroup>
+		<EnableWindowsTargeting>true</EnableWindowsTargeting>
+	</PropertyGroup>
 
 	<PropertyGroup>
 		<Build_Android>true</Build_Android>
