--- a/src/Uno.Extensions.Http.UI/common.props
+++ b/src/Uno.Extensions.Http.UI/common.props
@@ -1,6 +1,4 @@
-﻿<Project Sdk="MSBuild.Sdk.Extras" ToolsVersion="15.0">
-	<Import Project="..\tfms-non-ui.props" />
-
+﻿<Project ToolsVersion="15.0">
 	<PropertyGroup>
 		<Description>HTTP Extensions for registering endpoints for Uno Platform, UWP and WinUI</Description>
 
@@ -8,6 +6,10 @@
 		<WarningsNotAsErrors>$(WarningsNotAsErrors);CS1591</WarningsNotAsErrors>
 	</PropertyGroup>
 
+  <ItemGroup Condition="'$(_IsUWP)' == 'true' or '$(_IsWinUI)' == 'true'">
+    <PackageReference Include="System.Net.Http.WinHttpHandler" />
+  </ItemGroup>
+  
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Http" />
   </ItemGroup>
@@ -20,12 +22,6 @@
 
 	<ItemGroup>
 		<ProjectReference Include="..\Uno.Extensions.Core\Uno.Extensions.Core.csproj" />
+		<ProjectReference Include="..\Uno.Extensions.Http\Uno.Extensions.Http.csproj" />
 	</ItemGroup>
-
-	<ItemGroup>
-		<InternalsVisibleTo Include="Uno.Extensions.Authentication" />
-		<InternalsVisibleTo Include="Uno.Extensions.Http.UI" />
-		<InternalsVisibleTo Include="Uno.Extensions.Http.WinUI" />
-	</ItemGroup>
-
 </Project>
