--- a/testing/TestHarness/TestHarness.UITest/TestHarness.UITest.csproj
+++ b/testing/TestHarness/TestHarness.UITest/TestHarness.UITest.csproj
@@ -10,6 +10,7 @@
 		<PackageReference Include="Microsoft.NET.Test.Sdk" />
 		<PackageReference Include="Newtonsoft.Json" />
 		<PackageReference Include="NUnit" />
+		<PackageReference Include="SkiaSharp" />
 		<PackageReference Include="NUnit3TestAdapter" />
 		<PackageReference Include="Uno.UITest.Helpers" />
 		<PackageReference Include="Xamarin.UITest" />
