--- a/testing/TestHarness/Directory.Packages.props
+++ b/testing/TestHarness/Directory.Packages.props
@@ -36,8 +36,8 @@
     <PackageVersion Include="Uno.Core.Extensions.Logging.Singleton" Version="4.0.1" />
     <PackageVersion Include="Uno.Extensions.Logging.OSLog " Version="1.4.0" />
     <PackageVersion Include="Uno.Extensions.Logging.WebAssembly.Console" Version="1.3.0" />
-    <PackageVersion Include="Uno.Material" Version="2.6.1" />
-    <PackageVersion Include="Uno.Material.WinUI" Version="2.6.1" />
+    <PackageVersion Include="Uno.Material" Version="2.15.0-feature.5x.9" />
+    <PackageVersion Include="Uno.Material.WinUI" Version="2.15.0-feature.5x.9" />
     <PackageVersion Include="Uno.Microsoft.Toolkit.Uwp.UI" Version="7.1.11" />
     <PackageVersion Include="Uno.Toolkit.UI" Version="3.10.0-feature.5x.25" />
     <PackageVersion Include="Uno.Toolkit.UI.Material" Version="3.10.0-feature.5x.25" />
