--- a/testing/TestHarness/TestHarness.UITest/TestHarness.UITest.csproj
+++ b/testing/TestHarness/TestHarness.UITest/TestHarness.UITest.csproj
@@ -19,6 +19,7 @@
 		<PackageReference Include="Uno.UITest.Xamarin" />
 		<PackageReference Include="Uno.UITest.Helpers" />
 		<PackageReference Include="Microsoft.NETFramework.ReferenceAssemblies" PrivateAssets="All" />
+		<PackageReference Include="NunitXml.TestLogger"/>
 	</ItemGroup>
 
 	<ItemGroup>
