--- a/testing/TestHarness/Directory.Packages.props
+++ b/testing/TestHarness/Directory.Packages.props
@@ -23,6 +23,7 @@
 		<PackageVersion Include="Refit" Version="6.3.2" />
 		<PackageVersion Include="Refit.HttpClientFactory" Version="6.3.2" />
 		<PackageVersion Include="SkiaSharp" Version="2.88.3" />
+		<PackageVersion Include="SkiaSharp.NativeAssets.Linux" Version="2.88.3" />
 		<PackageVersion Include="SkiaSharp.HarfBuzz" Version="2.88.3" />
 		<PackageVersion Include="SkiaSharp.Skottie" Version="2.88.3" />
 		<PackageVersion Include="SkiaSharp.Views" Version="2.88.3" />
